--- a/ATOToolDemo/MainWindow.xaml
+++ b/ATOToolDemo/MainWindow.xaml
@@ -69,8 +69,7 @@
                                 Text="当前文件 " />
                             <xctk:WatermarkComboBox
                                 Height="21"
-                                Width="auto"
-                                
+                                Width="auto" 
                                 VerticalAlignment="Top"
                                 ItemsSource="{Binding FileNames_Sim}"
                                 SelectedIndex="{Binding Curr_file_idx, Mode=TwoWay}"
@@ -148,7 +147,6 @@
                             Header="指标6"
                             IsReadOnly="True"
                             Text="{Binding Braking_Level}" />
-
                     </Grid>
                     <Fluent:Button
                         Padding="5"
@@ -220,7 +218,7 @@
                             Background="{Binding Background_Change}"
                             BorderBrush="Black"
                             BorderThickness="1"
-                            Visibility="{Binding Vis_Change}">
+                            Visibility="Visible">
 
                             <TextBlock
                                 Padding="5,0"
@@ -238,7 +236,7 @@
                             Background="{Binding Background_Save}"
                             BorderBrush="Black"
                             BorderThickness="1"
-                            Visibility="{Binding Vis_Save}"
+                            Visibility="Visible"
                             >
                             <TextBlock
                                 Padding="5,0"
@@ -279,7 +277,9 @@
                                     x:Name="single_train"
                                     Margin="0,0,5,0"
                                     GroupName="LogFileMode"
-                                    IsChecked="{Binding IsAutoPaintOutDepotTrain}" />
+                                    IsChecked="{Binding IsAutoPaintOutDepotTrain}"
+                                    Command="{Binding ShowSinTrainRadio}"
+                                    />
                                 <TextBlock Text="显示单一列车" />
                             </StackPanel>
                             <StackPanel Orientation="Vertical">
@@ -289,24 +289,23 @@
                                 Header="设置"
                                 IsEnabled="{Binding ElementName=single_train, Path=IsChecked}">
                                     <StackPanel Orientation="Vertical">
+
                                         <StackPanel Orientation="Horizontal">
                                             <StackPanel Margin="5" Orientation="Horizontal">
                                                 <TextBlock
-                                            Margin="0,0,5,0"
-                                            VerticalAlignment="Center"
-                                            Text="文件: " />
+                                                    Margin="0,0,5,0"
+                                                    VerticalAlignment="Center"
+                                                    Text="文件: " />
                                                 <xctk:WatermarkComboBox
-                                            Width="auto"
-                                            MaxWidth="80"
-                                            ItemsSource="{Binding FileNames_Sim}"
-                                            SelectedIndex="{Binding Curr_fileSingle_idx}"
-                                            Watermark="选择文件" />
+                                                    Width="auto"
+                                                    ItemsSource="{Binding FileNames_Sim}"
+                                                    SelectedIndex="{Binding Curr_fileSingle_idx}"
+                                                    Watermark="选择文件" />
                                             </StackPanel>
                                             <xctk:WatermarkComboBox 
                                                         Watermark="图像类型" 
                                                         Margin="0,0,5,0" 
                                                         Width="auto"
-                                                        MaxWidth="50"
                                                         Height="20"
                                                         ItemsSource="{Binding MySinChartTypes}" 
                                                         SelectedIndex="{Binding MySinChartTypesIdx}"
@@ -315,20 +314,20 @@
                                                         Watermark="时间粒度" 
                                                         Margin="0,0,5,0" 
                                                         Width="auto"
-                                                        MaxWidth="50"
                                                         Height="20"
                                                         ItemsSource="{Binding MySinGra}" 
                                                         SelectedIndex="{Binding MySinGraIdx}"
                                                         />
-                                            <Button
+
+                                        </StackPanel>
+                                        <Button
                                         MinWidth="50"
-                                        Margin="5"
-                                        HorizontalAlignment="Stretch"
-                                        VerticalAlignment="Center"
+                                        Margin="0,0,20,0"
+                                        HorizontalAlignment="Right"
+                                        
                                         Content="显示"
                                         Command="{Binding ShowSingleTrain}" 
                                         />
-                                        </StackPanel>
                                     </StackPanel>
                                 </GroupBox>
                             </StackPanel>
@@ -337,7 +336,9 @@
                                     x:Name="multi_train"
                                     Margin="0,0,5,0"
                                     GroupName="LogFileMode"
-                                    IsChecked="{Binding IsAutoPaintInDepotTrain}" />
+                                    IsChecked="{Binding IsAutoPaintInDepotTrain}"
+                                    Command="{Binding ShowMulTrainRadio}"
+                                    />
                                 <TextBlock Text="显示多列车" />
                             </StackPanel>
 
@@ -414,50 +415,65 @@
                                         <!--<RadioButton GroupName="Second_Multy" Content="Status" Margin="5,5" Command="{Binding ChangeStatus}" IsChecked="{Binding MyChartTypes.IsStatusChanged}"/>
                                                     <RadioButton GroupName="Third_Multy" Content="ACC" Margin="5,5" Command="{Binding ChangeAcc}" IsChecked="{Binding MyChartTypes.IsAccChanged}"/>-->
                                     </StackPanel>
-                                    <ScrollViewer Margin="0,5">
+                                    <Grid>
+                                        <Grid.RowDefinitions >
+                                            <RowDefinition Height="150"/>
+                                            <RowDefinition Height="5"/>
+                                        </Grid.RowDefinitions>
+                                        <!--<ScrollViewer Margin="0,5">-->
                                         <DataGrid
-                                            Height="100"
+                                            Grid.Row="0"
+                                            Height="auto"
+                                            MinHeight="150"
                                             VerticalAlignment="Top"
                                             AutoGenerateColumns="False"
-                                            HorizontalScrollBarVisibility="Visible"
+                                            HorizontalScrollBarVisibility="Auto"
                                             ItemsSource="{Binding LogFileProp_Mult, Mode=TwoWay}"
                                             SelectedIndex="{Binding Curr_MultProp_idx,Mode=TwoWay}"
+                                            HorizontalAlignment="Left"
                                             >
                                             <DataGrid.Columns>
                                                 <DataGridTextColumn
                                                     Width="auto"
+                                                    MinWidth="20"
+                                                    Binding="{Binding Number}"
+                                                    Header="序号" 
+                                                    IsReadOnly="True"
+                                                    />
+                                                <DataGridTextColumn
+                                                    Width="auto"
                                                     MinWidth="70"
                                                     Binding="{Binding FileName}"
-                                                    Header="文件" />
-
+                                                    Header="文件" 
+                                                    IsReadOnly="True"
+                                                    />
                                                 <DataGridTextColumn
                                                     Width="auto"
                                                     MinWidth="70"
                                                     Binding="{Binding ChartType}"
-                                                    Header="图像类型" />
-
+                                                    Header="图像类型"
+                                                    IsReadOnly="True"
+                                                    />
                                                 <DataGridComboBoxColumn Header="时间粒度"  
                                                                         Width="auto"
-                                                                        MinWidth="130"
+                                                                        MinWidth="100"
                                                                         SelectedItemBinding="{Binding MyGraItem,Mode=TwoWay}" 
                                                                         ItemsSource="{Binding Source={StaticResource GraKey}}" 
                                                                         />
-                                                <!--<DataGridTemplateColumn
-                                                    Width="*"
-                                                    MinWidth="120"
-                                                    Header="时间粒度">
-                                                    <DataGridTemplateColumn.CellTemplate>
-                                                        <DataTemplate>
-                                                            <ComboBox ItemsSource="{Binding Granularity,Mode=TwoWay}"
-                                                                      SelectedIndex="{Binding Gra_idx,Mode=TwoWay}"
-                                                                      
-                                                                      />
-                                                        </DataTemplate>
-                                                    </DataGridTemplateColumn.CellTemplate>
-                                                </DataGridTemplateColumn>-->
                                             </DataGrid.Columns>
                                         </DataGrid>
-                                    </ScrollViewer>
+                                        <GridSplitter
+                                            Grid.Row="1"
+                                            Height="5"
+                                            VerticalAlignment="Top"
+                                            Background="LightGray"
+                                            HorizontalAlignment="Stretch"
+                                            ShowsPreview="True"
+                                            ResizeDirection="Rows"
+                                            Style="{StaticResource gridSplitterStyleForResizeRows}"
+                                            />
+                                    </Grid>
+        <!--</ScrollViewer>-->
                                 </StackPanel>
                             </GroupBox>
                         </StackPanel>
@@ -525,7 +541,7 @@
                                             Background="{Binding Background_Change}"
                                             BorderBrush="Black"
                                             BorderThickness="1"
-                                            Visibility="{Binding Vis_Change}">
+                                            Visibility="Visible">
                                             <TextBlock
                                                 Padding="5,0"
                                                 HorizontalAlignment="Center"
@@ -540,7 +556,7 @@
                                             Background="{Binding Background_Save}"
                                             BorderBrush="Black"
                                             BorderThickness="1"
-                                            Visibility="{Binding Vis_Save}"
+                                            Visibility="Visible"
                                             >
                                             <TextBlock
                                                 Padding="5,0"
@@ -554,6 +570,53 @@
                                 </StackPanel>
                             </GroupBox>
                         </StackPanel>
+                    </GroupBox>
+                    <GroupBox BorderBrush="Gray">
+                        <GroupBox.Header>
+                            <TextBlock Foreground="Red" Text="文件缓存区" />
+                        </GroupBox.Header>
+                        <GroupBox
+                                BorderBrush="Gray"
+                                BorderThickness="1"
+                                Header="设置">
+                            <StackPanel Orientation="Horizontal">
+                                <DataGrid
+                                            Height="auto"
+                                            MinHeight="50"
+                                            VerticalAlignment="Top"
+                                            AutoGenerateColumns="False"
+                                            HorizontalScrollBarVisibility="Auto"
+                                            ItemsSource="{Binding MyCache, Mode=TwoWay}"
+                                            SelectedIndex="{Binding MyCache_Idx,Mode=TwoWay}"
+                                            HorizontalAlignment="Left"
+                                            >
+                                    <DataGrid.Columns>
+                                        <DataGridTextColumn
+                                                    Width="auto"
+                                                    MinWidth="100"
+                                                    Binding="{Binding FileName}"
+                                                    Header="文件名" 
+                                                    IsReadOnly="True"
+                                                    />
+                                        <DataGridTextColumn
+                                                    Width="auto"
+                                                    MinWidth="100"
+                                                    Binding="{Binding FileType}"
+                                                    Header="文件类型" 
+                                                    IsReadOnly="True"
+                                                    />
+                                    </DataGrid.Columns>
+                                </DataGrid>
+                                <Button
+                                            Margin="5,10"
+                                            Height="20"
+                                            Width="80"
+                                            Padding="10,2"
+                                            Content="删除"
+                                            Command="{Binding DeleteFileCache}"
+                                            />
+                            </StackPanel>
+                        </GroupBox>
                     </GroupBox>
                 </StackPanel>
             </ScrollViewer>
@@ -620,8 +683,9 @@
                        Height="{Binding Height_Datagrid}"
                        VerticalAlignment="Top"
                        AutoGenerateColumns="False"
+                       HorizontalAlignment="Right"
                        HorizontalScrollBarVisibility="Auto"
-                       ItemsSource="{Binding ProcessedData_Asc, Mode=OneTime}" 
+                       ItemsSource="{Binding ProcessedData_Asc, Mode=OneTime}"  
                        >
                     <DataGrid.Columns>
                         <DataGridTextColumn 
@@ -659,8 +723,8 @@
                     Grid.Column="1"
                     Width="5"
                     HorizontalAlignment="Center"
-                    Background="White"
-                    Style="{StaticResource gridSplitterStyleForResizeColumns}"/>
+                    Background="LightGray"
+                    Style="{StaticResource gridSplitterStyleForResizeColumns}" />
                 <DataGrid
                        Grid.Column="2"
                        Height="{Binding Height_Datagrid}"
@@ -670,7 +734,8 @@
                        ItemsSource="{Binding ProcessedData_Asc, Mode=TwoWay}"
                        SelectedIndex="{Binding Curr_Ascpara_idx,Mode=TwoWay}"
                        SelectedValue="{Binding AscData,Mode=TwoWay}"
-                       SelectedValuePath="Data" Grid.ColumnSpan="2" Margin="4.622,0,-0.404,0"
+                       SelectedValuePath="Data"
+                       HorizontalAlignment="Left"
                        >
                     <DataGrid.Columns>
                         <DataGridTextColumn 
@@ -740,7 +805,7 @@
                                 Background="{Binding Background_Change}"
                                 BorderBrush="Black"
                                 BorderThickness="1"
-                                Visibility="{Binding Vis_Change}"
+                                Visibility="Visible"
                                 >
                                 <TextBlock
                                     Padding="5,0"
@@ -757,7 +822,7 @@
                                 Background="{Binding Background_Save}"
                                 BorderBrush="Black"
                                 BorderThickness="1"
-                                Visibility="{Binding Vis_Save}"
+                                Visibility="Visible"
                                 >
                                 <TextBlock
                                     Padding="5,0"
